# medocker

./: .cursorrules  .dockerignore  .env.example  .gitignore  Dockerfile  Medocker-Windows.bat  PROGRESS.md  README.md  about.md  build.bat  build.py  build.sh  build_auto.py  configure.py  configure.sh  docker-compose.prod.yml  docker-compose.yml  fix_pathlib.py  medocker.bat  medocker.py  medocker.sh  medocker.spec  package.bat  package.sh  pyproject.toml  requirements.txt  run_direct.bat  service_catalog.json  start.bat  web.py
config/: default.yml
data/: service_catalog.json  test.json
data-templates/: README.md
data/keycloak/realms/: medocker-realm.json
releases/: Medocker.bat  README.txt
releases/medocker-windows/: README.md  launcher.bat  test_launcher.bat
releases/medocker-windows/config/: custom.yml  default.yml
releases/medocker-windows/docs/: authentication-and-proxy.md  services.md
releases/medocker-windows/templates/: ansible.html  base.html  cart.html  deploy.html  index.html  services.html
scripts/: setup_data.bat  setup_data.sh
scripts/dev/: start.sh
scripts/launch/: run_configure.bat  run_configure.sh  run_medocker.bat  run_medocker.sh  run_web.bat  run_web.sh
src/: __init__.py  config.py  configure.py  medocker.py  run_web.py  web.py
src/medocker/: __init__.py  config.py  configure.py  medocker.py  run_web.py  web.py
src/playbooks/: README.md  medocker-user-setup.yml
templates/: base.html  cart.html  config.html  services.html  test_api.html
