[tool.poetry]
name = "medocker"
version = "0.1.0"
description = "A comprehensive Docker packaging of all the software a medical practice needs"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/yourusername/medocker"
keywords = ["docker", "healthcare", "medical", "emr", "keycloak"]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0"
pathlib = "^1.0.1"
flask = "^2.2.3"
flask-wtf = "^1.1.1"
wtforms = "^3.0.1"
waitress = "^2.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
medocker = "medocker:main"
medocker-config = "configure:main"
medocker-web = "run_web:main"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88 