[tool.poetry]
name = "medocker"
version = "0.1.0"
description = "A comprehensive Docker packaging of all the software a medical practice needs"
authors = ["Iliya Yaroshevskiy <iliya.yaroshevskiy@gmail.com>"]
readme = "README.md"
license = "GNU Affero GPLv3"
repository = "https://github.com/Zaroganos/medocker"
keywords = ["docker", "ansible", "healthcare", "medical", "emr", "keycloak"]
packages = [{include = "medocker", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0"
flask = "^2.2.3"
flask-wtf = "^1.1.1"
wtforms = "^3.0.1"
waitress = "^2.1.2"
paramiko = "^3.3.1"
ansible-runner = "^2.3.4"
jinja2 = "^3.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pyinstaller = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
medocker = "src.medocker:main"
medocker-config = "src.configure:main"
medocker-web = "src.run_web:main"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88 