[project]
name = "medocker"
version = "0.1.0"
description = "A comprehensive Docker packaging of all the software a medical practice needs"
authors = [
    {name = "Iliya Yaroshevskiy", email = "iyarosh1@binghamton.edu"}
]
readme = "README.md"
license = {text = "GNU Affero GPLv3"}
requires-python = ">=3.12,<3.14"
keywords = ["docker", "ansible", "healthcare", "medical", "emr", "keycloak"]
dependencies = [
    "PyYAML>=6.0.1",
    "flask>=3.0.0",
    "flask-wtf>=1.2.1",
    "wtforms>=3.1.1",
    "waitress>=3.0.0",
    "paramiko>=3.4.0",
    "ansible-runner>=2.4.0",
    "jinja2>=3.1.3",
    "Flask-Session>=0.6.0",
    "flask-cors>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "isort>=5.13.0",
    "pyinstaller>=6.10.0",
]

[project.scripts]
medocker = "medocker:medocker_main"
medocker-config = "medocker:configure_main"
medocker-web = "medocker:web_main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.uv]
# uv-specific configuration
dev-dependencies = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "isort>=5.13.0",
    "pyinstaller>=6.10.0",
] 